--- a/src/components/GridCard.astro
+++ b/src/components/GridCard.astro
@@ -1,20 +1,24 @@
 ---
+// GridCard.astro
 import { getPageInfo, getLatestPosts } from "../lib/wp";
 import Card from "./Card.astro";
-
 const { title, content } = await getPageInfo("bienvenidos-a-gamehub");
-const posts = await getLatestPosts({ perPage: 4 });
+const posts = await getLatestPosts({ perPage: 3 });
 ---
 
-<div class="bg-gray-100 px-4 py-12">
-	<div class="max-w-5xl max-lg:max-w-3xl max-sm:max-w-sm mx-auto">
-		<h2 class="text-3xl font-bold text-slate-900 mb-8 text-center">
-			{title}
-		</h2>
-		<div class="text-lg text-center mb-8" set:html={content} />
-		<div
-			class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-sm:gap-8"
-		>
+<div class="bg-gray-50 dark:bg-slate-900 px-4 py-16 sm:py-24">
+	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+		<div class="text-center mb-16">
+			<h2 class="text-4xl sm:text-5xl font-bold text-slate-900 dark:text-white mb-6">
+				{title}
+			</h2>
+			<div 
+                class="mx-auto max-w-3xl text-xl text-slate-600 dark:text-slate-300 [&>p]:leading-relaxed" 
+                set:html={content} 
+            />
+		</div>
+		
+		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-10">
 			{posts.map((post: any) => <Card {...post} />)}
 		</div>
 	</div>
