--- a/src/components/GridCard.astro
+++ b/src/components/GridCard.astro
@@ -6,19 +6,16 @@ const { title, content } = await getPageInfo("bienvenidos-a-gamehub");
 const posts = await getLatestPosts({ perPage: 3 });
 ---
 
-<div class="bg-gray-50 dark:bg-slate-900 px-4 py-16 sm:py-24">
-	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-		<div class="text-center mb-16">
-			<h2 class="text-4xl sm:text-5xl font-bold text-slate-900 dark:text-white mb-6">
-				{title}
-			</h2>
-			<div 
-                class="mx-auto max-w-3xl text-xl text-slate-600 dark:text-slate-300 [&>p]:leading-relaxed" 
-                set:html={content} 
-            />
-		</div>
-		
-		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-10">
+<div class="bg-black">
+	<div class="py-12 md:py-40 container mx-auto max-w-5xl px-4 md:px-0">
+		<h2 class="text-center font-extrabold text-4xl md:text-5xl uppercase text-white mb-8">
+			{title}
+		</h2>
+		<div set:html={content} class="text-white text-base md:text-lg text-center " />
+	</div>
+
+	<div class="bg-white">
+		<div class="container mx-auto max-w-5xl py-8 md:py-24 grid grid-cols-1 md:grid-cols-2 gap-8 px-4 md:px-0">
 			{posts.map((post: any) => <Card {...post} />)}
 		</div>
 	</div>
