--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,13 @@
 ---
 import '../styles/global.css'
+import '@fontsource/titillium-web/400.css';
+import '@fontsource/titillium-web/700.css';
+import '@fontsource/titillium-web/900.css';
+
+import '@fontsource/poppins/400.css';
+import '@fontsource/poppins/600.css';
+import { ClientRouter } from 'astro:transitions';
+
 export interface Props {
 	title: string
 }
@@ -14,16 +22,18 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-gray-50 dark:bg-slate-900">
+	<body>
+		<ClientRouter />
 		<slot />
 	</body>
 </html>
 
-<style>
+<style is:global>
 	html,
 	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+		font-family: 'Poppins', sans-serif;
+	}
+	h1, h2, h3 {
+		font-family: 'Titillium Web', sans-serif;
 	}
 </style>
