--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,6 @@
 ---
+import { Icon } from 'astro-icon/components'
+
 // Card.astro
 interface Props {
     title: string;
@@ -6,42 +8,45 @@ interface Props {
     featuredImage: string;
     date: string;
     slug: string;
+    tags: { name: string; slug?: string }[];
 }
-const { title, excerpt, featuredImage, date, slug } = Astro.props;
+const { title, excerpt, featuredImage, date, slug, tags } = Astro.props;
 ---
 
-<div class="group bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 ease-[cubic-bezier(0.4,0,0.2,1)] transform hover:-translate-y-2 relative">
-    <div class="relative overflow-hidden aspect-[5/3]">
+<div class="overflow-hidden shadow-md hover:shadow-lg transition-all duration-300">
+    <div class="relative overflow-hidden">
         <img 
-            src={featuredImage} 
+            src={featuredImage}
             alt={title} 
-            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105" 
+            class="bject-cover duration-300 hover:scale-105" 
         />
         <div class="absolute inset-0 bg-gradient-to-t from-slate-900/30 to-transparent" />
     </div>
     
     <div class="p-6 space-y-4">
         <div class="flex items-center gap-2 text-sm font-medium">
-            <span class="text-orange-500 dark:text-orange-400">{date}</span>
+            <Icon class="text-rose-500" name="lucide:clock-7" size={20}/> <span class="text-rose-500">{date}</span>
         </div>
-        
-        <h3 class="text-xl font-bold text-slate-900 dark:text-white transition-colors">
+        <div class="flex items-center gap-2">
+            <Icon name="lucide:tag" size={20} />
+            <div class="flex gap-2 items-center">
+                {tags.map((tag: any) => <span>#{tag.name}</span>)} 
+            </div>
+        </div>
+        <a href={`/post/${slug}`}>
+            <h3 class="text-xl uppercase text-gray-800 font-extrabold transition-colors"             transition:name={slug}>
             {title}
         </h3>
-        
+        </a>
         <div 
-            class="text-slate-600 dark:text-slate-300 text-base leading-relaxed line-clamp-3"
+            class="text-base text-gray-500 leading-relaxed line-clamp-3"
             set:html={excerpt}
         />
-        
         <a
             href={`/post/${slug}`}
-            class="inline-flex items-center font-semibold text-orange-500 dark:text-orange-400 hover:text-orange-600 dark:hover:text-orange-500 transition-colors group/button"
+            class="inline-flex items-center font-semibold uppercase py-3 px-4 border-2 border-rose-400 text-rose-400 hover:text-white hover:bg-rose-400 duration-300 transition-colors"
         >
-            Leer más...
-            <svg class="ml-2 w-4 h-4 transition-transform group-hover/button:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
-            </svg>
+            Leer más
         </a>
     </div>
 </div>
